[package]
name = "bugutv-checkin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
dotenvy = "0.15.7"
httpmock = "0.7.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", default-features = false, features = ["cookies", "rustls-tls"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["tracing"] }
